<resources>
    <string name="app_name">AttendMe</string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_">continue</string>
    <string name="or">Or</string>
    <string name="register_an_institution">Register an Institution</string>
    <string name="register_to_an_institution">Register to an Institution</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_there">Hello there,</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="an_institution">an Institution</string>
    <string name="institution_name">Institution name</string>
    <string name="next">Next</string>
    <string name="you_can_t_change_it_after">you can\'t change it after</string>
    <string name="re_enter_the_password">Re enter the password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_face_registration">FaceRegistration</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create">Create</string>
    <string name="new_account">new account</string>
    <string name="enter">Enter</string>
    <string name="password_again">password again</string>
    <string name="the_institution_location">the Institution location</string>
    <string name="choose">Choose</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="resend_email">Resend email</string>
    <string name="open_mail_app">Open mail app</string>
    <string name="recovery_email_was_sent_successfully">Recovery email was sent successfully</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_attendance">My attendance</string>
    <string name="my_account">My Account</string>
    <string name="my_institution">My Institution</string>
    <string name="update_face_data">Update face data</string>
    <string name="title_activity_my_attendance">MyAttendance</string>
    <string name="action_settings">Settings</string>
    <string name="mark_my_attendance_today">Mark my attendance today</string>
    <string name="mark_my_attendance">Mark my attendance</string>
    <string name="no_attendance_record_yet">No attendance record yet!</string>
    <string name="start_marking_attendance">Start marking attendance</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dash_board_my_attendance_prompt">
        A quick glance of your attendance details
    </string>
    <string name="dismiss">dismiss</string>
    <string name="image_in_prompt_dialog">image in prompt dialog</string>
</resources>