<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashBoard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/grey"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dash_my_attendance_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintWidth_percent="0.38"
        android:clickable="true"
        android:focusable="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/myAttendanceLottieAnime"
                app:lottie_rawRes="@raw/my_attendance_anim"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/my_attendance"/>
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintVertical_bias="1"
                android:text="@string/my_attendance"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dash_my_account_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintWidth_percent="0.38">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/myAccountLottieAnime"
                app:lottie_rawRes="@raw/my_account_anim"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/my_attendance"/>
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintVertical_bias="1"
                android:text="@string/my_account"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/dash_my_institution"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.7"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/myInstitutionAnime"
                app:lottie_rawRes="@raw/institution_anim"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/my_attendance"/>
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintVertical_bias="1"
                android:text="@string/my_institution"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dash_update_my_face_data_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.38" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/updateFaceDataAnime"
                app:lottie_rawRes="@raw/update_face_data_anim"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintVertical_bias="0"
                android:contentDescription="@string/my_attendance"/>
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintVertical_bias="1"
                android:text="@string/update_face_data"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>